--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "": "file:",
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.3",
-    "astro": "^5.6.1",
+    "@astrojs/mdx": "^4.2.5",
+    "astro": "^5.7.8",
     "astro-relative-links": "^0.4.0",
+    "gray-matter": "^4.0.3",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.3"
   }
 }
